--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <audio src="no-problem(mk).mp3" controls></audio>
 
 	
-<video src="dp.mp4" controls=""></video?
+<video src="dp.mp4" controls width="400" height="300">
 </body>
 </html>
 
